장바구니, 레시피 db 연동